<resources>
    <string name="app_name">CafeApp</string>
    <string name="nothing_to_read">Nothing to read</string>
    <string name="preference_file_key">pt.up.fe.cmov16.cafe.cafeapp</string>
    <string name="acme_connection_welcome">Acme Power - Connected</string>
    <string name="hashtag">#</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="request_number">Request Number</string>
    <string name="edit_products">Edit products</string>
    <string name="scan_qrcode">Scan QRCODE</string>
    <string name="prod_name">Product Name</string>
    <string name="active">Active</string>
    <string name="save">Save</string>
    <string name="edit_product">Edit Product</string>
</resources>
