<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.up.fe.cmov16.cafe.cafeapp.ui.EditProductActivity">

    <TextView
        android:padding="10dp"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_product"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:padding="10dp"
        android:textSize="18sp"
        android:id="@+id/prod_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:hint="@string/prod_name"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:padding="10dp"
        android:textSize="18sp"
        android:id="@+id/prod_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prod_name"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        android:textColor="@color/colorPrimary" />

    <CheckBox
        android:padding="10dp"
        android:textSize="18sp"
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prod_price"
        android:text="@string/active"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/blue_border"
        android:text="@string/save"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
